
8.37  2020-04-19
  - Added keep_alive_timeout attribute to Mojo::Server::Daemon.
  - Added -k options to daemon and prefork commands.
  - Added keep_alive_timeout setting to Hypnotoad.
  - Improved timeout setting performance significantly in Mojo::IOLoop::Stream.
  - Improved again method in Mojo::Reactor, Mojo::Reactor::EV and
    Mojo::Reactor::Poll to allow changing the invocation time of active timers.
  - Fixed support for 425 status in Mojo::Message::Response.

8.36  2020-03-31
  - Added handler attribute to Test::Mojo.
  - Added test method to Test::Mojo.
  - Improved Test::Mojo to allow for extensions to be tested more easily.
  - Improved request_id attribute in Mojo::Message::Request to be a little more
    unique. (mst)

8.35  2020-03-20
  - Added not_empty filter to Mojolicious::Validator.

8.34  2020-03-16
  - Removed experimental status from proxy->get_p, proxy->post_p and
    proxy->start_p helpers in Mojolicious::Plugin::DefaultHelpers.
  - Removed experimental status from compress and min_compress_size attributes
    in Mojolicious::Renderer.
  - Removed experimental status from high_water_mark attribute in
    Mojo::IOLoop::Stream.
  - Removed experimental status from respond method in Mojolicious::Renderer.
  - Removed experimental status from bytes_waiting and can_write methods in
    Mojo::IOLoop::Stream.
  - Removed experimental status from dehop method in Mojo::Headers.
  - Removed experimental status from scope_guard function in Mojo::Util.
  - Improved size check in Mojolicious::Validator to only require one argument.
  - Fixed Mojolicious::Validator to also validate empty string values instead of
    ignoring them. This behaviour had caused a lot of confusion in the past.
  - Fixed plugin generator not to use an __END__ section.

8.33  2020-02-11
  - Added EXPERIMENTAL humanize_bytes function to Mojo::Util. (kraih, coolo)
  - Added EXPERIMENTAL humanize_bytes method to Mojo::ByteStream.