@@ -52,9 +52,9 @@ Mojolicious::Command::daemon - Daemon command
                                          application, defaults to the value of
                                          MOJO_HOME or auto-detection
     -i, --inactivity-timeout <seconds>   Inactivity timeout, defaults to the
-                                         value of MOJO_INACTIVITY_TIMEOUT or 15
+                                         value of MOJO_INACTIVITY_TIMEOUT or 30
     -k, --keep-alive-timeout <seconds>   Keep-alive timeout, defaults to the
-                                         value of MOJO_KEEP_ALIVE_TIMEOUT or 10
+                                         value of MOJO_KEEP_ALIVE_TIMEOUT or 5
     -l, --listen <location>              One or more locations you want to
                                          listen on, defaults to the value of
                                          MOJO_LISTEN or "http://*:3000"
